# threshold-engine

./: .gitignore  Dockerfile  README.md  alert_rules.yaml  docker-compose.yml  example_config.yaml  pyproject.toml
mimir/: mimir.yaml
threshold_engine/: __init__.py  __main__.py  config.py  engine.py  prometheus.py  scheduler.py
